--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,9 @@
   .nav-btn {
     @apply hidden h-6 md:inline-flex cursor-pointer hover:scale-125 transition-all duration-150 ease-out;
   }
+  .nav-btn-mobile {
+    @apply h-6 md:hidden cursor-pointer hover:scale-125 transition-all duration-150 ease-out;
+  }
   .post-btn {
     @apply h-7 hover:scale-125 cursor-pointer transition-all duration-150 ease-out;
   }
